bk_ida/gccida/g3/cancel_changes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:880:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v1; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:896:29: error: expected expression
while ( v1 != ( change_t_0 *)v2 ); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:896:17: error: use of undeclared identifier 'change_t_0'
while ( v1 != ( change_t_0 *)v2 ); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:896:30: error: expected ')'
while ( v1 != ( change_t_0 *)v2 ); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/recog.c:896:7: note: to match this '('
while ( v1 != ( change_t_0 *)v2 ); 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cancel_changes/src/obj/recog.o] Error 1
